fix for offscreen elements

--- a/intro/main.css
+++ b/intro/main.css
@@ -3,6 +3,7 @@
 html{
     height:100%;
     background-color: #2C5E9D;
+    overflow: hidden;
 }
 
 #textAnim{
